# swarm

./: .gitignore  BUILD_INSTRUCTIONS.md  README.md  build_apk.sh  build_log.txt  pubspec.yaml
lib/: main.dart
lib/config/: constants.dart
lib/ui/screens/: home_screen.dart
lib/ui/theme/: app_theme.dart
lib/ui/widgets/: connection_indicator.dart  peer_list_tile.dart
mesh_app/: BRIDGE_SETUP.md  IMPLEMENTATION_SUMMARY.md  NATIVE_TRANSPORT_IMPLEMENTATION.md  PLATFORM_CHANNEL_IMPLEMENTATION.md  SERVICES_DOCUMENTATION.md  STORAGE_IMPLEMENTATION.md  pubspec.yaml
mesh_app/android/app/src/main/java/com/securemesh/messenger/: MainActivity.java
mesh_app/android/app/src/main/kotlin/com/securemesh/transport/: NearbyTransportManager.kt
mesh_app/ios/Runner/AppDelegate/: AppDelegate.swift
mesh_app/ios/Runner/Transport/: MultipeerTransportManager.swift
mesh_app/lib/: main.dart
mesh_app/lib/bridges/: bridge_definitions.dart  mesh_core_bridge.dart  mesh_core_bridge.frb.dart
mesh_app/lib/models/: message_model.dart  peer_model.dart
mesh_app/lib/screens/: chat_list_screen.dart  chat_screen.dart  home_screen.dart  onboarding_screen.dart
mesh_app/lib/services/: crypto_service.dart  identity_service.dart  mesh_service.dart  native_transport_channel.dart  sync_service.dart  transport_service.dart
mesh_app/lib/storage/: README.md  message_entity.dart  settings_service.dart  storage_service.dart
mesh_core/: Cargo.toml
mesh_core/src/: lib.rs
rust_core/: Cargo.toml
rust_core/src/: crypto.rs  lib.rs  sync.rs  transport.rs
