[package]
name = "mesh_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]
path = "src/lib.rs"

[dependencies]
# Cryptography
sodiumoxide = "0.2.7"
base64 = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Data synchronization (CRDT)
automerge = "0.5"

# Networking (libp2p for internet transport)
# libp2p = { version = "0.53", features = ["tcp", "noise", "yamux", "gossipsub"] }

# FFI support for Flutter
flutter_rust_bridge = "=1.82.0"
lazy_static = "1.4"

[profile.release]
opt-level = 3
lto = true
