[package]
name = "rust_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]
path = "src/lib.rs"

[dependencies]
flutter_rust_bridge = "=1.82.6"
libsodium-sys = "0.2"
automerge = "0.5"
libp2p = { version = "0.53", features = ["tcp", "noise", "yamux", "gossipsub", "mdns"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = "0.4"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"

[build-dependencies]
flutter_rust_bridge_codegen = "=1.82.6"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
